--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,7 @@
   <style>
     .container {
       margin: 30px 0;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
     }
 
     button:active {
@@ -90,7 +91,7 @@
         <div id="content">
           <div
             style="
-              padding: 5px 10px;
+              padding: 30px 60px;
               border: 1px solid transparent;
               border-radius: 24px;
               transition: all 0.2s;
@@ -106,7 +107,7 @@
           </div>
           <div
             style="
-              padding: 10px;
+              padding: 30px 60px;
               border: 1px solid transparent;
               transition: all 0.2s;
               border-radius: 24px;
@@ -122,7 +123,7 @@
           </div>
           <div
             style="
-              padding: 10px;
+              padding: 30px 60px;
               border: 1px solid transparent;
               transition: all 0.2s;
               border-radius: 24px;
