--- a/html/index.html
+++ b/html/index.html
@@ -171,11 +171,6 @@
             justify-content: center;
           "
         >
-          <span
-            style="color: white; margin-bottom: 10px; font-size: 32px"
-            id="preis"
-            >$10.000</span
-          >
           <div
             style="
               display: flex;
@@ -256,7 +251,7 @@
   });
 
   let kart;
-  let preis;
+  let time;
 
   $(document).ready(() => {
     $("#kart1").click(() => {
@@ -281,18 +276,15 @@
     });
 
     $("#10").click(() => {
-      $("#preis").html("$10.000");
-      preis = 10000;
+      time = 600;
     });
 
     $("#30").click(() => {
-      $("#preis").html("$25.000");
-      preis = 25000;
+      time = 1800;
     });
 
     $("#60").click(() => {
-      $("#preis").html("$40.000");
-      preis = 40000;
+      time = 3600;
     });
   });
 
@@ -305,7 +297,7 @@
         },
         body: JSON.stringify({
           kart: kart ? kart : 0,
-          price: preis ? preis : 10000,
+          time: time ? time : 10000,
         }),
       })
         .then((resp) => resp.json())
